# FCED_MusicGenreClassificator

./: ML_RandomForest.ipynb  Project_notebook.ipynb  README.md  features.xlsx  features_reduced.xlsx  pyproject.toml
